Bug 1410760 - Fix comment on NotNull<UniquePtr<T>>. r=gerald DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D100322